--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "request": "launch",
             "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
             "args": [
-                "listing_0038_many_register_mov"
+                "listing_0039_more_movs"
             ],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
